--- a/META.yml
+++ b/META.yml
@@ -22,6 +22,7 @@ no_index:
     - xt
 requires:
   Carp: 0
+  Class::Data::Inheritable: 0
   DBI: 0
   DBIx::Skinny: 0
   UNIVERSAL::require: 0
@@ -29,4 +30,4 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/nekokak/qudo.git
-version: 0.01_02
+version: 0.01_03
