--- a/META.yml
+++ b/META.yml
@@ -30,4 +30,4 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/nekokak/qudo.git
-version: 0.01_03
+version: 0.02
