Import of NEKOKAK/Qudo-0.0202 from CPAN.
gitpan-cpan-distribution: Qudo
gitpan-cpan-version:      0.0202
gitpan-cpan-path:         NEKOKAK/Qudo-0.0202.tar.gz
gitpan-cpan-author:       NEKOKAK
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -6,6 +6,7 @@ build_requires:
   ExtUtils::MakeMaker: 6.42
   Test::More: 0
   Test::Output: 0
+  Test::Requires: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
@@ -31,4 +32,4 @@ requires:
   YAML: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.0201
+version: 0.0202
