Import of NEKOKAK/Qudo-0.0206 from CPAN.
gitpan-cpan-distribution: Qudo
gitpan-cpan-version:      0.0206
gitpan-cpan-path:         NEKOKAK/Qudo-0.0206.tar.gz
gitpan-cpan-author:       NEKOKAK
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: 'simple job queue manager'
+abstract: 'simple and extensible job queue manager'
 author:
   - 'Atsushi Kobayashi <nekokak _at_ gmail dot com>'
 build_requires:
@@ -33,4 +33,4 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/nekokak/qudo.git
-version: 0.0205
+version: 0.0206
